<resources>
    <string name="app_name">AppBasedOnExam</string>

    <string name="open_drawer">open navigation drawer</string>
    <string name="close_drawer">close navigation drawer</string>

    <string name="option1">Written_Exam</string>
    <string name="option2">Quiz</string>
    <string name="option3">QuestionBank</string>
    <string name="option4">Instructions</string>

    <string name="option5">Get Prepared for Written</string>
    <string name="option6">Get Prepared for Quiz</string>
    <string name="option7">See Previous Questions</string>
    <string name="option8">Follow The Instructions</string>
    <string name="option9">Profile</string>


    <string name="square_root_symbol">\u221a</string>
    <string name="cube_root_symbol">\u221B</string>
    <string name="fourth_root_symbol">\u221a</string>
    <string name="pie_symbol">\u03C0</string>
    <string name="xsquare">x\u00B2</string>
    <string name="xcube">x\u00B3</string>
    <string name="exponent">e\u00B0</string>
    <string name="dividesymbol">x\u246B</string>

    <string name="firstBtn">option.1</string>
    <string name="secondBtn">option.2</string>
    <string name="thirdBtn">option.3</string>
    <string name="fourthBtn">option.4</string>


    <string-array name="Course_names">
        <item>Computer Programming</item>
        <item>Object Oriented Programming</item>
        <item>Data Structure and Algorithms</item>
        <item>Data Base Systems</item>
        <item>Electrical Machines</item>
        <item>Electrical Shop Practice</item>
        <item>Circuits and Systems I</item>
        <item>Circuits and Systems II</item>
        <item>Analog Electronic Circuits I</item>
        <item>Analog Electronic Circuits II</item>

    </string-array>
</resources>
