<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="2"
    android:gravity="center"
    android:background="@color/floral_white"
    android:padding="5dp"
    android:orientation="vertical"
    tools:context=".FrontActivity">


    <LinearLayout
        android:gravity="center"
        android:clipToPadding="false"
        android:orientation="horizontal"
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        >
        <android.support.v7.widget.CardView
            android:foreground="?android:attr/selectableItemBackground"
            android:clickable="true"
            android:layout_margin="10dp"
            android:id="@+id/profileCardViewID"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="match_parent">
            <LinearLayout
                android:orientation="vertical"
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/dark_slate_blue">
                <ImageView
                    android:background="@drawable/circlebackground_gray"
                    android:padding="10dp"
                    android:src="@drawable/profile_icon"
                    android:layout_width="65dp"
                    android:layout_height="65dp" />
                <TextView
                    android:textAppearance="?android:textAppearanceLarge"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="6dp"
                    android:text="@string/option1"
                    android:textColor="@color/floral_white"
                    android:textStyle="bold"/>
                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/dodger_blue"
                    android:layout_margin="10dp"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/option5"
                    android:padding="5dp"
                    android:textColor="@color/black"/>
            </LinearLayout>

        </android.support.v7.widget.CardView>
        <android.support.v7.widget.CardView
            android:foreground="?android:attr/selectableItemBackground"
            android:clickable="true"
            android:layout_margin="10dp"
            android:id="@+id/coursesCardViewID"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="match_parent">
            <LinearLayout
                android:orientation="vertical"
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/forest_green">
                <ImageView
                    android:background="@drawable/circlebackground_gray"
                    android:padding="10dp"
                    android:src="@drawable/course_icon"
                    android:layout_width="65dp"
                    android:layout_height="65dp" />

                <TextView
                    android:textAppearance="?android:textAppearanceLarge"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="6dp"
                    android:text="@string/option2"
                    android:textColor="@color/floral_white"
                    android:textStyle="bold"/>
                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/dodger_blue"
                    android:layout_margin="10dp"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/option6"
                    android:padding="5dp"
                    android:textColor="@color/black"/>

            </LinearLayout>

        </android.support.v7.widget.CardView>

    </LinearLayout>

    <LinearLayout
        android:gravity="center"
        android:clipToPadding="false"
        android:orientation="horizontal"
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        >
        <android.support.v7.widget.CardView
            android:foreground="?android:attr/selectableItemBackground"
            android:clickable="true"
            android:layout_margin="10dp"
            android:id="@+id/quizBankCardViewID"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="match_parent">
            <LinearLayout
                android:orientation="vertical"
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/purple">
                <ImageView
                    android:background="@drawable/circlebackground_gray"
                    android:padding="10dp"
                    android:src="@drawable/qzbank_icon"
                    android:layout_width="65dp"
                    android:layout_height="65dp" />
                <TextView
                    android:textAppearance="?android:textAppearanceLarge"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="6dp"
                    android:text="@string/option3"
                    android:textColor="@color/floral_white"
                    android:textStyle="bold"/>
                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/dodger_blue"
                    android:layout_margin="10dp"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/option7"
                    android:padding="5dp"
                    android:textColor="@color/black"/>
            </LinearLayout>

        </android.support.v7.widget.CardView>
        <android.support.v7.widget.CardView
            android:foreground="?android:attr/selectableItemBackground"
            android:clickable="true"
            android:layout_margin="10dp"
            android:id="@+id/instructionsCardViewID"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="match_parent">
            <LinearLayout
                android:orientation="vertical"
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/cornflower_blue">

                <ImageView
                    android:layout_width="76dp"
                    android:layout_height="65dp"
                    android:background="@drawable/circlebackground_gray"
                    android:padding="10dp"
                    android:src="@drawable/help_icon" />
                <TextView
                    android:textAppearance="?android:textAppearanceLarge"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="6dp"
                    android:text="@string/option4"
                    android:textColor="@color/floral_white"
                    android:textStyle="bold"/>
                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/dodger_blue"
                    android:layout_margin="10dp"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/option8"
                    android:padding="5dp"
                    android:textColor="@color/black"/>
            </LinearLayout>

        </android.support.v7.widget.CardView>

    </LinearLayout>


</LinearLayout>


