<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/floral_white"
    tools:context=".Question$QuizQuestionActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        >

        <TextView
            android:id="@+id/questions"
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:text="what is the question"
            android:padding="10dp"
            android:textAlignment="center"
            android:textSize="20dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="10dp"
            android:orientation="horizontal"
            android:padding="5dp"
            android:paddingTop="5dp">



            <Button
                android:id="@+id/firstBtn"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="#999FDA3E"
                android:padding="10dp"
                android:textAlignment="center"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:textSize="12sp"
                android:text="@string/firstBtn" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="10dp"
            android:orientation="horizontal"
            android:padding="5dp"
            android:paddingTop="5dp">



            <Button
                android:id="@+id/secondBtn"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="#99b0cc83"
                android:padding="10dp"
                android:textAlignment="center"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:textSize="12sp"
                android:text="@string/secondBtn" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="10dp"
            android:orientation="horizontal"
            android:padding="5dp"
            android:paddingTop="5dp">



            <Button
                android:id="@+id/thirdBtn"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="#99b0cc83"
                android:padding="10dp"
                android:textAlignment="center"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:textSize="12sp"
                android:text="@string/thirdBtn" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="10dp"
            android:orientation="horizontal"
            android:padding="5dp"
            android:paddingTop="5dp">


            <Button
                android:id="@+id/fourthBtn"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="#99b0cc83"
                android:padding="10dp"
                android:textAlignment="center"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:textSize="12sp"
                android:text="@string/fourthBtn" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:orientation="horizontal"
            android:padding="5dp">

            <TextView
                android:id="@+id/timerText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="00:00"
                android:textAlignment="center"
                android:textSize="28dp" />

        </LinearLayout>
    </LinearLayout>


</RelativeLayout>

